--- a/testjump.html
+++ b/testjump.html
@@ -544,6 +544,11 @@
             $("#toApp").attr("src", "tkanmanapp://savepic?url=https%3A%2F%2Fmhpic.dm300.com%2Fcomic%2FB%2F%25E5%25BF%2585%25E8%2583%259C%25E8%2587%25B3%25E5%25B0%258A%2F%25E4%25BA%25BA%25E7%2589%25A9%25E4%25BB%258B%25E7%25BB%258DF0_297728%2F1.jpg-kmh.middle.webp");
         }
 
+        function addmorecollection(){
+            $("#toApp").attr("src", "tkanmanapp://addmorecollection?json=%5B%7B%22comic_id%22%3A108632%2C%22comic_name%22%3A%22%E9%BE%99%E8%85%BE%E6%88%98%E5%B0%8A%22%7D%2C%7B%22comic_id%22%3A107804%2C%22comic_name%22%3A%22%E7%A5%9E%E7%BA%A7%E6%B8%94%E5%A4%AB%22%7D%2C%7B%22comic_id%22%3A27417%2C%22comic_name%22%3A%22%E5%A6%96%E7%A5%9E%E8%AE%B0%22%7D%2C%7B%22comic_id%22%3A104685%2C%22comic_name%22%3A%22%E7%81%B5%E5%89%91%E5%B0%8A%22%7D%5D");
+
+        }
+
     </script>
 </head>
 <body>
@@ -714,6 +719,7 @@
 <a class="btn" href="javascript:luckystardetail()"> 我的福星详情页</a><br/>
 <a class="btn" href="javascript:luckystardetailother()"> 他人的福星详情页</a><br/>
 <a class="btn" href="javascript:addcollection()"> 收藏修罗剑尊107751</a><br/>
+<a class="btn" href="javascript:addmorecollection()"> 一键收藏多部漫画</a><br/>
 
 <a class="btn" href="https://cashin.321mh.com/v1/autologin?type={type}&openid={openid}&productname={productname}&platformname={platformname}"> 兑吧</a><br/>
 
