--- a/testjump.html
+++ b/testjump.html
@@ -530,7 +530,8 @@
                 callback: "sharecallback",
                 text1: "注册实名，抽6666现金",
                 text2: "邀请好友，领免费空投",
-                text3: "用浏览器打开：",
+                text3: "用浏览器打开：\n https://collect.mh51.com/xxxxxxx",
+                text_share:"注册实名，抽6666现金；邀请好友，领免费空投用。用浏览器打开：https://collect.mh51.com/xxxxxxx"
 
             }
         }
