--- a/testjump.html
+++ b/testjump.html
@@ -268,8 +268,8 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=freecard&card_type=2&type=10");
         }
 
-        function clearcard() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=clearcard&card_type=1");
+        function cleancard() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=cleancard");
         }
 
         function vipcard() {
@@ -621,7 +621,7 @@
 <a class="btn" href="javascript:freecard()">跳转到免费卡</a><br/>
 <a class="btn" href="javascript:freecard2()">跳转到倍卡</a><br/>
 <a class="btn" href="javascript:freecard3()">跳转到打折卡</a><br/>
-<a class="btn" href="javascript:clearcard()">跳转到净化卡</a><br/>
+<a class="btn" href="javascript:cleancard()">跳转到净化卡</a><br/>
 <a class="btn" href="javascript:vipcard()">跳转到贵宾卡</a><br/>
 <a class="btn" href="javascript:vipcard1()">跳转到贵宾卡1</a><br/>
 <a class="btn" href="javascript:vipcard2()">跳转到贵宾卡2</a><br/>
