--- a/testjump.html
+++ b/testjump.html
@@ -551,6 +551,11 @@
             $("#toApp").attr("src", "tkanmanapp://customshare?content=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Fnewyear.png&type=2");
         }
 
+
+        function noleftback() {
+            $("#toApp").attr("src", "tcattoonapp://app?callback=noleftback");
+        }
+
     </script>
 </head>
 <body>
@@ -724,6 +729,7 @@
 <a class="btn" href="javascript:addmorecollection()"> 一键收藏多部漫画</a><br/>
 <a class="btn" href="javascript:nftShareText()">NFT分享文字</a><br/>
 <a class="btn" href="javascript:nftSharePic()">NFT分享图片</a><br/>
+<a class="btn" href="javascript:noleftback()">不允许侧滑返回</a><br/>
 <a class="btn" href="https://cashin.321mh.com/v1/autologin?type={type}&openid={openid}&productname={productname}&platformname={platformname}"> 兑吧</a><br/>
 
 
