--- a/testjump.html
+++ b/testjump.html
@@ -553,7 +553,7 @@
 
 
         function noleftback() {
-            $("#toApp").attr("src", "tcattoonapp://app?callback=noleftback");
+            $("#toApp").attr("src", "tkanmanapp://app?callback=noleftback");
         }
 
     </script>
