--- a/test.html
+++ b/test.html
@@ -7,6 +7,9 @@
     <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="js/jquery.tmpl.min.js" type="text/javascript"></script>
     <script src="./clipboard.min.js"></script>
+    <!-- WPA start -->
+<script id="qd2852177237e49e274192edc60bf82a0146d71ce8a2" src="https://wp.qiye.qq.com/qidian/2852177237/e49e274192edc60bf82a0146d71ce8a2" charset="utf-8" async defer></script>
+<!-- WPA end -->
     <script type="text/javascript">
         //        showData();
         showTest();
